typo in forms-intro.html

--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -589,7 +589,7 @@
     <p>
       The form language and the form implementation in solid-ui can't do
       everything, but it can handle a pretty wide selection of tasks in common
-      daily life at home and at work. It can be vary efficient as developers can
+      daily life at home and at work. It can be very efficient as developers can
       reuse material between forms. Users can even generate their own forms.
     </p>
     Future directions include separate implementations of the form UI code in
