typo in forms-intro.html

--- a/Documentation/forms-intro.html
+++ b/Documentation/forms-intro.html
@@ -592,7 +592,7 @@
       daily life at home and at work. It can be very efficient as developers can
       reuse material between forms. Users can even generate their own forms.
     </p>
-    Future directions include separate implementations of the form UI code in
+    Future directions include separate implementations of the form UI code
     for various platforms, and using various UI frameworks. There may also be
     extensions of the system with new field types, more options for setting style
     from various sources, etc.
