--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -27,7 +27,7 @@
   <pre id="viewSource-templateTitle"></pre><script>showSource('templateTitle')</script>
   <div id="div-templateTitle"></div> -->
 
-  <h2 id="formField"><a href="#formField">UI.widgets.field[UI.ns.ui('Form').uri] / xUI.widgets.field[UI.ns.ui('Group').uri], no already</a></h2>
+  <h2 id="formField"><a href="#formField">UI.widgets.field[UI.ns.ui('Form').uri] / UI.widgets.field[UI.ns.ui('Group').uri], no already</a></h2>
   <script id="script-formField">
     window.addEventListener('DOMContentLoaded', (event) => {
       const container = $('#div-formField')
