--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -5,10 +5,8 @@
     <title>solid-ui UI.widgets.forms examples page</title>
     <script type="text/javascript" src="../../lib/webpack-bundle.js"></script>
     <script>
-      const $ = document.querySelector.bind(document)
-      
       function showSource(widgetName) {
-      $(`#viewSource-${widgetName}`).innerHTML = $(`#script-${widgetName}`).innerText
+      document.getElementById(`viewSource-${widgetName}`).innerHTML = document.getElementById(`script-${widgetName}`).innerText
           .replace(/&/g, "&amp;")
           .replace(/</g, "&lt;")
           .replace(/>/g, "&gt;")
@@ -18,6 +16,14 @@
     </script>
   </head>
 <body>
+  <h1>See also:</h1>
+  <ul>
+    <li><a href="../../Documentation/forms-intro.html">Forms intro</a></li>
+    <li><a href="../../Documentation/form-ecosystem.html">Form ecosystem</a></li>
+    <li><a href="https://solid.github.io/form-playground/playground.html">Form Playground</a></li>
+    <li><a href="https://solid.github.io/form-playground/browse.html">Form Browse</a></li>
+    <li><a href="../../Documentation/api/">API docs</a></li>
+  </ul>
   <!-- <h2 id="templateTitle"><a href="#templateTitle">templateTitle</a></h2>
   <script id="script-templateTitle">
     window.addEventListener('DOMContentLoaded', (event) => {
@@ -27,16 +33,38 @@
   <pre id="viewSource-templateTitle"></pre><script>showSource('templateTitle')</script>
   <div id="div-templateTitle"></div> -->
 
+  <h2 id="appendForm"><a href="#appendForm">appendForm</a></h2>
+  <script id="script-appendForm">
+    window.addEventListener('DOMContentLoaded', async (event) => {
+      const dom = document
+      const container = document.getElementById('div-appendForm')
+      const already = {}
+      const subject = UI.rdf.namedNode('https://michielbdejong.inrupt.net/profile/card#me')
+      const form = UI.rdf.namedNode('https://timbl.com/timbl/Public/Test/Forms/individualForm.ttl#form1')
+      const doc = subject.doc()
+      const callbackFunction = () => {
+        console.log('calback appendForm called!')
+      }
+      console.log(`Fetching ${doc.uri} ...`)
+      await UI.store.fetcher.load(doc)
+      console.log(`... fetched ${doc.uri}`)
+      UI.widgets.appendForm(dom, container, already, subject, form, doc)
+      console.log('HTML that was generated:', document.getElementById('div-appendForm').innerHTML);
+    })
+  </script>
+  <pre id="viewSource-appendForm"></pre><script>showSource('appendForm')</script>
+  <div id="div-appendForm"></div>
+
   <h2 id="formField"><a href="#formField">UI.widgets.field[UI.ns.ui('Form').uri] / UI.widgets.field[UI.ns.ui('Group').uri], no already</a></h2>
   <script id="script-formField">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const container = $('#div-formField')
+      const container = document.getElementById('div-formField')
       const already = {}
       const subject = UI.rdf.namedNode('http://example.com/#this')
       const form = UI.rdf.namedNode('http://example.com/#form')
       const store = UI.rdf.namedNode('http://example.com/#store')
       const callbackFunction = (ok, errorMessage) => {
-        console.log(ok, errorMessage, $('#div-formField').innerHTML);
+        console.log(ok, errorMessage, document.getElementById('#div-formField').innerHTML);
       }
       UI.store.add(form, UI.ns.ui('parts'), new UI.rdf.Collection([
         UI.rdf.namedNode('http://example.com/#part1'),
@@ -56,7 +84,7 @@
         store,
         callbackFunction
       );
-      console.log('HTML that was generated:', $('#div-formField').innerHTML);
+      console.log('HTML that was generated:', document.getElementById('div-formField').innerHTML);
     })
   </script>
   <pre id="viewSource-formField"></pre><script>showSource('formField')</script>
@@ -69,7 +97,7 @@
     // shows the use of `already`.
 
     window.addEventListener('DOMContentLoaded', (event) => {
-      const container = $('#div-groupField')
+      const container = document.getElementById('div-groupField')
       const subject = UI.rdf.namedNode('http://example.com/#this')
       const form = UI.rdf.namedNode('http://example.com/#form')
       const store = UI.rdf.namedNode('http://example.com/#store')
@@ -78,7 +106,7 @@
         [key]: true
       }
       const callbackFunction = (ok, errorMessage) => {
-        console.log(ok, errorMessage, $('#div-groupField').innerHTML);
+        console.log(ok, errorMessage, document.getElementById('#div-groupField').innerHTML);
       }
       UI.store.add(form, UI.ns.ui('parts'), new UI.rdf.Collection([
         UI.rdf.namedNode('http://example.com/#part1'),
@@ -98,7 +126,7 @@
         store,
         callbackFunction
       )
-      console.log('HTML that was generated:', $('#div-groupField').innerHTML)
+      console.log('HTML that was generated:', document.getElementById('div-groupField').innerHTML)
     })
   </script>
   <pre id="viewSource-groupField"></pre><script>showSource('groupField')</script>
@@ -107,7 +135,7 @@
   <h2 id="optionsField"><a href="#optionsField">UI.widgets.field[UI.ns.ui('Options').uri]</a></h2>
   <script id="script-optionsField">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const container = $('#div-optionsField')
+      const container = document.getElementById('#div-optionsField')
       const subject = UI.rdf.namedNode('http://example.com/#this')
       const form = UI.rdf.namedNode('http://example.com/#form')
       const store = UI.rdf.namedNode('http://example.com/#store')
@@ -116,7 +144,7 @@
         [key]: true
       }
       const callbackFunction = (ok, errorMessage) => {
-        console.log(ok, errorMessage, $('#div-optionsField').innerHTML);
+        console.log(ok, errorMessage, document.getElementById('#div-optionsField').innerHTML);
       }
       UI.store.add(form, UI.ns.ui('dependingOn'), UI.rdf.namedNode('http://example.com/#bla'), UI.rdf.namedNode('http://example.com/'))
 
@@ -133,7 +161,7 @@
         store,
         callbackFunction
       )
-      console.log('HTML that was generated:', $('#div-optionsField').innerHTML)
+      console.log('HTML that was generated:', document.getElementById('div-optionsField').innerHTML)
     })
   </script>
   <pre id="viewSource-optionsField"></pre><script>showSource('optionsField')</script>
