--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -33,6 +33,41 @@
   <pre id="viewSource-templateTitle"></pre><script>showSource('templateTitle')</script>
   <div id="div-templateTitle"></div> -->
 
+  <h2 id="mostSpecificClassURI"><a href="#mostSpecificClassURI">mostSpecificClassURI</a></h2>
+  <script id="script-mostSpecificClassURI">
+    window.addEventListener('DOMContentLoaded', async (event) => {
+      const fullNameField = UI.rdf.namedNode('https://timbl.com/timbl/Public/Test/Forms/individualForm.ttl#fullNameField')
+      await UI.store.fetcher.load(fullNameField.doc())
+      const result = UI.widgets.mostSpecificClassURI(fullNameField)
+      document.getElementById('div-mostSpecificClassURI').appendChild(document.createTextNode(result))
+    })
+  </script>
+  <pre id="viewSource-mostSpecificClassURI"></pre><script>showSource('mostSpecificClassURI')</script>
+  <div id="div-mostSpecificClassURI"></div>
+
+  <h2 id="fieldFunction"><a href="#fieldFunction">fieldFunction</a></h2>
+  <script id="script-fieldFunction">
+    window.addEventListener('DOMContentLoaded', async (event) => {
+      const dom = document
+      const container = document.getElementById('div-fieldFunction')
+      const already = {}
+      const subject = UI.rdf.namedNode('https://michielbdejong.inrupt.net/profile/card#me')
+      const form = UI.rdf.namedNode('https://timbl.com/timbl/Public/Test/Forms/individualForm.ttl#form1')
+      const doc = subject.doc()
+      const callbackFunction = () => {
+        console.log('callback fieldFunction called!')
+      }
+      await UI.store.fetcher.load(subject.doc())
+      const fullNameField = UI.rdf.namedNode('https://timbl.com/timbl/Public/Test/Forms/individualForm.ttl#fullNameField')
+      await UI.store.fetcher.load(fullNameField.doc())
+      const fieldFunction = UI.widgets.fieldFunction(dom, fullNameField)
+      const result = fieldFunction(dom, container, already, subject, fullNameField, doc)
+      document.getElementById('div-fieldFunction').appendChild(result)
+    })
+  </script>
+  <pre id="viewSource-fieldFunction"></pre><script>showSource('fieldFunction')</script>
+  <div id="div-fieldFunction"></div>
+
   <h2 id="appendForm"><a href="#appendForm">appendForm</a></h2>
   <script id="script-appendForm">
     window.addEventListener('DOMContentLoaded', async (event) => {
@@ -43,13 +78,11 @@
       const form = UI.rdf.namedNode('https://timbl.com/timbl/Public/Test/Forms/individualForm.ttl#form1')
       const doc = subject.doc()
       const callbackFunction = () => {
-        console.log('calback appendForm called!')
+        console.log('callback appendForm called!')
       }
-      console.log(`Fetching ${doc.uri} ...`)
       await UI.store.fetcher.load(doc)
-      console.log(`... fetched ${doc.uri}`)
+      await UI.store.fetcher.load(form.doc())
       UI.widgets.appendForm(dom, container, already, subject, form, doc)
-      console.log('HTML that was generated:', document.getElementById('div-appendForm').innerHTML);
     })
   </script>
   <pre id="viewSource-appendForm"></pre><script>showSource('appendForm')</script>
@@ -70,6 +103,11 @@
         UI.rdf.namedNode('http://example.com/#part1'),
         UI.rdf.namedNode('http://example.com/#part2')
       ]), UI.rdf.namedNode('http://example.com/'))
+      UI.store.add(UI.rdf.namedNode('http://example.com/#part1'), UI.ns.rdf('type'), UI.ns.ui('Comment'))
+      UI.store.add(UI.rdf.namedNode('http://example.com/#part1'), UI.ns.ui('contents'), '[this is part 1 of the form]')
+      UI.store.add(UI.rdf.namedNode('http://example.com/#part2'), UI.ns.rdf('type'), UI.ns.ui('Comment'))
+      UI.store.add(UI.rdf.namedNode('http://example.com/#part2'), UI.ns.ui('contents'), '[this is part 2 of the form]')
+        
 
       // FIXME: https://github.com/solid/solid-ui/issues/239
       document.outlineManager = {
@@ -84,7 +122,6 @@
         store,
         callbackFunction
       );
-      console.log('HTML that was generated:', document.getElementById('div-formField').innerHTML);
     })
   </script>
   <pre id="viewSource-formField"></pre><script>showSource('formField')</script>
@@ -126,7 +163,6 @@
         store,
         callbackFunction
       )
-      console.log('HTML that was generated:', document.getElementById('div-groupField').innerHTML)
     })
   </script>
   <pre id="viewSource-groupField"></pre><script>showSource('groupField')</script>
@@ -137,16 +173,12 @@
     window.addEventListener('DOMContentLoaded', (event) => {
       const container = document.getElementById('#div-optionsField')
       const subject = UI.rdf.namedNode('http://example.com/#this')
-      const form = UI.rdf.namedNode('http://example.com/#form')
+      const exampleOptionsField = UI.rdf.namedNode('http://example.com/#exampleOptionsField')
       const store = UI.rdf.namedNode('http://example.com/#store')
-      const key = subject.toNT() + '|' + form.toNT()
-      const already = {
-        [key]: true
-      }
       const callbackFunction = (ok, errorMessage) => {
         console.log(ok, errorMessage, document.getElementById('#div-optionsField').innerHTML);
       }
-      UI.store.add(form, UI.ns.ui('dependingOn'), UI.rdf.namedNode('http://example.com/#bla'), UI.rdf.namedNode('http://example.com/'))
+      UI.store.add(exampleOptionsField, UI.ns.ui('dependingOn'), UI.rdf.namedNode('http://example.com/#bla'), UI.rdf.namedNode('http://example.com/'))
 
       // FIXME: https://github.com/solid/solid-ui/issues/239
       document.outlineManager = {
@@ -157,11 +189,10 @@
         container,
         already,
         subject,
-        form,
+        exampleOptionsField,
         store,
         callbackFunction
       )
-      console.log('HTML that was generated:', document.getElementById('div-optionsField').innerHTML)
     })
   </script>
   <pre id="viewSource-optionsField"></pre><script>showSource('optionsField')</script>
