--- a/examples/notepad/index.html
+++ b/examples/notepad/index.html
@@ -20,7 +20,7 @@
         document.location.href.replace(/\/[^\/]*$/, "/pad.ttl#this")
       )
       await fetcher.load(pad.doc())
-      const htmlStr = UI.pad.notepadToHTML(pad, kb)
+      const htmlStr = notepadToHTML(pad, kb)
       const doc = $('#iframe-notepadToHTML').contentWindow.document;
       doc.open()
       doc.write(htmlStr)
@@ -125,7 +125,7 @@
       const padDoc = kb.sym(document.location.href.replace(/\/[^\/]*$/, "/pad.ttl#this"))
       await fetcher.load(padDoc.doc())
       options = {}
-      const htmlStr = UI.pad.manageParticipation(Document, container, padDoc, subject, me, options)
+      const htmlStr = manageParticipation(Document, container, padDoc, subject, me, options)
     })
   </script>
 
