--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -284,5 +284,14 @@
   <pre id="viewSource-optionsFieldDependingOn"></pre><script>showSource('optionsFieldDependingOn')</script>
   <div id="div-optionsFieldDependingOn"></div>
 
+  <h2 id="templateTitle"><a href="#templateTitle">templateTitle</a></h2>
+  <script id="script-templateTitle">
+    window.addEventListener('DOMContentLoaded', (event) => {
+      UI.widgets.templateTitle()
+    })
+  </script>
+  <pre id="viewSource-templateTitle"></pre><script>showSource('templateTitle')</script>
+  <div id="div-templateTitle"></div>
+
 </body>
 </html>
