Split out commentField

--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -68,7 +68,8 @@
   <pre id="viewSource-fieldFunction"></pre><script>showSource('fieldFunction')</script>
   <div id="div-fieldFunction"></div>
 
-  <h2 id="appendFormTrivial"><a href="#appendFormTrivial">appendForm, trivial</a></h2>
+  <h2 id="appendFormTrivial"><a href="#appendFormTrivial">appendForm, trivial / Comment Field</a></h2>
+  <p>This example shows a trivial use of the `appendForm` function, in conjunction with a Comment field.</p>
   <script id="script-appendFormTrivial">
     window.addEventListener('DOMContentLoaded', async (event) => {
       const dom = document
